# TROJ

./: trajectory_01.txt
catkin_ws/devel/: setup.sh
catkin_ws/devel/include/i2cpwm_board/: DriveModeRequest.h  DriveModeResponse.h  IntValueRequest.h  IntValueResponse.h  Position.h  PositionArray.h  Servo.h  ServoArray.h  (+6 more)
catkin_ws/src/final/: CMakeLists.txt  package.xml~
catkin_ws/src/finalmove/: .setup_assistant  CMakeLists.txt
catkin_ws/src/sixpack/: CMakeLists.txt  package.xml  package.xml~
catkin_ws/src/sixpack_controller/: .setup_assistant  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/troj_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml~
catkin_ws/src/troj_controller/src/: troj_controller.cpp  troj_controller.cpp~
sockelgruppe_01/: CMakeLists.txt  package.xml  package.xml~
sockelgruppe_01/config/: joint_names_sockelgruppe_01.yaml
sockelgruppe_01/launch/: display.launch  gazebo.launch
sockelgruppe_01/meshes/: base_link.STL  schultergruppe.STL  sockel.STL
sockelgruppe_01/urdf/: sockelgruppe_01.urdf
tow/: .setup_assistant  CMakeLists.txt  package.xml
tow/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  sockelgruppe_01.srdf
tow/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+125 files in other folders)
